Version 0.9.5
- Methods that get keys as parameter are now class methods, +[ObjectivePGP ...]
- Adds decrypt:usingKeys:....
- Adds Blowfish cipher support

Version 0.9.4
- Fixes generation subkeys with passphrase.
- Improves memory usage when reading messages.

Version 0.9.3
- Fixes public key equality checks.
- Ignores invalid/broken signature subpackets.

Version 0.9.2
- Fixes nullability and undefined behaviours issues.
- Fixes issue where subkey should be used to sign for some keys.
- Fixes packets equality issues.
- Improves gnu-dummy support.
- Improves ZIP compression support.
- Sets default key size for key generator to 3072 bits.
- Improves error handling.

Version 0.9.1
- Fixes subkeys generation.
- Adds support for embedded signatures.
- PGPArmor return String now.

Version 0.9
- Fixes keys management (import/export issues).
- Fixes instances equality.
- Fixes partial packets with zero body length.
- Improves objects copying (NSCopying for packets).
- Reverts NSSet collections to NSArray.
- Updates public API (cleanups).
- Updates tests.
- Updates documentations.

Version 0.8
- Adds public and private keys generation feature with PGPKeyGenerator
- Adds methods to import and remove key instance
- Adds expirationDate property to a key instance
- Improves subkeys handling
- Exports keys data without reusing imported raw data.
- Fixes edge cases of decryption data with password encrypted key
- Fixes exporting private macros
- Fixes packets equality checks
- Fixes signature verifying flow, return on fail
- Fixes parsing corrupted input data.

Version 0.7
- Fixes TripleDSA decryption.
- Fixes MPI memleak.
- Fixes reading certificate sym. algs.
- Improves DSA keys support.
- Improves signature subpackets.
- Apply OpenPGP errata #2270.

Version 0.6.2
- Avoids assertion failing to decrypt packet when signing
- Supports "critical bit"

Version 0.6.1
- Adds PGPKey.keyID property
- Adds Swift Playground with a sample Swift code