@@ -1,0 +1,26 @@
+-----BEGIN PGP MESSAGE-----
+
+hQEMA6k+nfDIl5a8AQf+Jsh5KNNdMnFgJLMw85j+F4xq244NR2J/tPXC2Kf6Woyk
+9FvT/wf1pAIzILtZlGhfU+uVLwl8TLI0Vz8thAijzr7bWz78oOMM54DD2CMDzgiL
+BlNSboQGK1/WNgALIoXQvxIcr81NNPcC+xDs4up9qeXAnaErX9viMfxWewLWQGZ7
+tsPSCojI2E4QmSp0uB2WXba4Yf3LchCQjOGI+Q+HV93peVhPWWZI8BMkq/a/GqZJ
+h9g0TtDSNTs/XpVeTPM05hbh+uY8s5ht+oHosvwU22uRrdoPGybVpSahzOaiflzM
+0MwFWRvssFjupWBmJuZSZR3ldhfiYmXsnSoZLf3h8dLpATsRRQVOmDTZZsec1MAk
+fyfzxqMJObpPU3E/iWTzDvuT0s1XbxnS2VImiCe6bDacb9eaF98nwBUkNQCsh2hP
+/Z/iNA1fVVqznQLv5UNpeDA9b1WWgmW1KbqQUUo49PKn//xz+T2R4iKIaltdyPkT
+h7hex47NZEoE18YhY3vY9mEzmrl3GurqX0SbtX+bfajIjGryf6U3Pto3lkBCYQiw
+BvWvZ/8Ko2vRFBEi07Q+xP4L4EhHRK4IY0gOxb22R1SJivMH3QWaSgH7oMXhP7Tz
+BdIZOpqwkGDdIk+tC+uTBqcmML3XDELyI3ZsqWoc8w7KWZ7npPtvWJ5lpSr7suSV
+tyvZemcAtLLBdUI/NXC8BYNSP6FMQVPlMH2+wN8Qw2Q2yV4eyCVWnYNojBzXEAzl
+DW19HvD8kQU70BB6+BA839WvssJCgDeiUnFwzvr2rP46oxcnRy7drY7Rxd3JXKBx
+36LgqJuO29U7bkX9Eil7hJanq0xgJry/gaDlWenqrxluOQ7XzVKLzKe7TQ1yBSj6
+u1D/KmOu0FknJItOpWulXWgMYrcTUSv92RBEsJhBY4a/dm071SMJchLg2GaM5n3C
+7K/7taSYhTHzuwec0DrT97gA+p3/F+RlrJf4/Lp35EwbcZm606SXvE6eZq6wCl02
+eDMZtagwJ6RwhRSsfjiTW97AL8b1AUoyOaGVkVg2qEdmuIl2hbw/O/9p91duuB8S
++1Ptzk4WHCSrjnl1GGvEkVNwRCF5ZC7n0/YGdo1jDZXacRwrQC0wgwjhhbBufGa+
+whPUHIGhW4EWbbnlpjngADVJ0U5nM6iVitR0DNOh7CROmvNkisHoW/TR+/mM4Xlt
+mopES6lfS0jzqPd8FaVH1fn1S/odO9Qko/4/hpkbXa4HsuOeP2nLmj35MkMNGKk4
+Z1pZEX8H4mhzSK9rqL3vP+drVFfLBcvOgAV4BJ1HRJjOFvxc2DNPECCSQT/mm5Du
+JH5ulx3W5C/MHHbk+hTGFh/8
+=n5KT
+-----END PGP MESSAGE-----
