@@ -1,0 +1,57 @@
+-----BEGIN PGP PRIVATE KEY BLOCK-----
+
+lQOYBFlOMfYBCACn/5e+3TQng90LKB1X/BTx4+Pco2mC8chWnMxee/ul34NAy65H
+Cug6Lrp9UPswvMdCkYn2tHhFV05EL/u9ohdfw70cf+Cm6HL8PTLW0Ur73pUUDiB3
+8NzF+3F/EsE+wx4Uw9e52+WXEbA2Jn/b1nEECat3OuWux2SVPJfqcCcX+mSyzB9K
+OT6AaopY6UBdDsu+IEo2iXgBORqT3uafMBvisj+gpU0MYJ3NQ5gRVsOn25pk6tkw
+dvKPhTJXEZuBhfgxp43NmKr+IOyVkeOiiJZEJG000VF4B/u3JXu1vb4p3G8nl6e3
+SgwJO3sSrBqChW3J92VT795+hxG4IYFfQQy/ABEBAAEAB/0TTQC4uN6JEP6QODzx
+eCX1NGK1XUDTU8aEd4yIk7icR0rjuC1+6U3iLAQuPuOHpz3tSUiPGLod8qMsn6aj
+FBWYtvrpufdWtatK4he5KQpzArt14Q7x41uPPg1oCquQ87G9CP2mfhD+g4BkeD/a
+7eQbZqZVvbqC6KgxomiBp/5AeXWjkSSzhR9zFz6VudBLHy8KgntrO41u/EBpHAiy
+xB8EtZyWqFIGET2cQ0Irxt7xzkHBCHiG2zYaBXUk3ZYsLc+0Btu5ethRL8KaiG1w
+5jJpZY6S8B1f5Qrg6DlfyGhEVYrw1c0qq0nI0Bd4H+QkMFcznS1fuCrVEhmW/TAQ
+jL/BBADNkVqwOQdamBpMkScgLu7sE+tfY23+9WNvw73kp0zN7Or7e/2ors+u87zv
+TEmYNma2yjajbnm1VOPNr2yl+34h5k3qf3aesvBkR5vCV4iecSG6a60HAdk3LJ0P
+TZ3OEKgB6b63InoVirIK83zaN5X3fGT7UNCEjzllhssDpxFkiQQA0TazYqshvbqp
+T4SmlbLszLP+CwtD+oYiHt3Zlz98yhnjVDo/iFA3uh7nC/4ulC/Fu/YcpsCjWuF5
+TRfMS9MNpNFn4ZUVbfEQN3EVL0GJlGAuWxfixdwlm0/PkLgIdAo6exQGQDd/+oaK
+4Qp9ICX40lUKBDUSwJ58o383sj9jpQcD+QE23VJgtLp7mfIQ0TbLkS8HfjV2cohG
+Uky2NT3zCY+Kt8GfhwhhrSTwocJ5dwx3fxnqcqC3bJ3FgetwUYLBo2xosV6CC2G/
+8td5Ui2leYhZxSGPMbrf7FYyfSXLUPDiTaLgLTYAaIaBWtGJ62b+EB9Z69V+G/fC
+NVWXdpxEKc7NPpu0H0JvYkVuemV2YWxvcyA8Ym9iQGVuemV2YWxvcy5kZT6JAVQE
+EwEKAD4WIQSt+1UlrAJiYgu+2TxMq5RVQ4CcgwUCWU4x9gIbAwUJB4YfgAULCQgH
+AwUVCgkICwUWAgMBAAIeAQIXgAAKCRBMq5RVQ4Ccg6wrB/9yC3DQr+5l6w16ZBfU
+mMSLqt8kK91l2SVngu2lr/fhY9Xb+yRsWhtv3Xiih7ZlYXDsvMS79sWJIB0WxGST
+X412K6799GcyBFIjmqycCPsH5b4UsLXQXuyU2awt++iVyJh+tWG5q7BxSF7rZk9v
+9o99Yv/NnLWXQV+OOARcgZO0xgedYnA3gIp6W+w2QN0UTEwgeqT85N+vQZrMVut9
+nK9kTauWhYQJ7AYiFrIW7paLBwA8xznD7UqIyytPn3e7e1rU134rCE9L4s9WKbJo
+0VUtSCqRBgeRKl56MCHRryTDIEBpUCEi94XGGy3XvH0gu0J9MKg9hucEteeKYi1O
+5JTjnQOYBFlOMfYBCADZcUQdi03Bq4G+rRA4uR+ZlNxDDeuQ8v/FECgfrOcN5wwa
+AvRxtD5JHP9kIn8TS2Cd4f9ze2qWJsbMV+VR+R2YCZ6nZZ262ReejgDUcj+lmnw6
+h0ezEh1xhKi62nDFvDs02IAoGJfOGLUu95mSN5bzOzFFH8l0FXmchO1F0oBCuFKB
+zJCKkCKdsbhdAa7Yd801URcFmV0zrB6FMJJjiusSa8+c9DvzJC28jHYYdHQcUfBx
+DEUKckx1+sSWn8BSFJFETiPPwLY4hNB6ntAv1a1mbTh0I7c+iTo5izKlpN0mEGsS
+fFQhH5E2EqPqn2Lk+TAECla1ZeOTOyg/3jiG6CqdABEBAAEAB/0ZiTA/KfttOaeI
+jYmAp9j6r904MLvP74GzEmUr5yHRY6drrJopeknwSywBBf4XdXw4vnBCDyXi0VX6
+bH4dZNyhXMvZi9j8tv8Lm1CkonAwEhbxxq5YbNGxYatxGjMxPZxUZfKTAuRdC1DH
+3cMWxVmAYhy0qfl+HQGFrKSy1PhEHWrsDTK+E1pQsEr0+JKS0MLO5/R7z3KSRT2l
+cKVRCFDg6aWcxwfKfpyuKQtzVwKs5WkdK4up6epYGl7CZwjnqB+kD8mEt447zQVT
+jkbi/oqxR8qmUxi/knfvnfpL0+soYDjg+pGieBShjZorl+wkVPRGt9ZlZIn3lG1S
+Gk/0T3vRBADedMIDdtuJSKGQA5NopyLTHk39F/i33oXsxwK019ursJIM5YgIQPd7
+EN4WdjVygRyLB/n52BvxuLqPwrcgUqh1c17RdteFZCp8bVkusDlMG3tjlZoOhKhX
+KiRYx0p2z34KKokemDfnZZau/NQ3XUIcEEaeKYBIqIz7FKaZl4699QQA+jr4y8y8
+84l/MpGPJu4mAc0UL1cNph+nWlmAnMdinX01KdSwOF5THA1DlSftSAZXmwrimguV
+qOuxokiU4MTUn8sIg869Fk7Uy1fO9FQBxcymXNcHa3f/AVvfqTrDm4fesH66U9oK
+RNwzhYdCxZt4MVmXi5oeVoJ9t5qOlQTSaQkEAOkew9udAO0WiqCMFz0/xNMNKdP3
+5mmG6kEcuZzxPeQjFB38madu0gLcyluySHZDhxMLF8QpAHCSvjrlD+FJIt4fBsdR
+j37yayfy+SynhZRQ45l0sGZOvOfhNUnSyTR+cq+QauHej3UN4miKofJCNUsHCu+0
+gyCM0H/ELuKE9TovQ7CJATwEGAEKACYWIQSt+1UlrAJiYgu+2TxMq5RVQ4CcgwUC
+WU4x9gIbDAUJB4YfgAAKCRBMq5RVQ4Ccgx5OB/4pibtiU20GsEFB6YEZrngFPv6l
+vFHZyC/5H1K3v7zlBJBXOxT3RUIeOUQMlC+GJnJND4UzjQMDu45ffbF0PdDEnhIs
+2j3mEBNb4kVOvazlS/eudYz1EdlqjRi9Z+JcTWeb6UNK/GxUA5siEEd5mGNZHbKI
+IGf6TyH+uq2RUcJGZEnnF7odXvmX/TREK9fJQLWFedRrdWSnQMEZ5XyeUQUWQhX0
+dc2/qga6yLa+GyHB6OqAjdqJUfdQf10aozcc0FQBuir6SFctteqpM0F1Q2l8gsW0
+oYXFg4DP96BHngFRDrHPLAL3W88Ej9XKHW2k9k1ia8qj8SEwvtqJemzBz6fX
+=D9ot
+-----END PGP PRIVATE KEY BLOCK-----
