@@ -1,7 +1,8 @@
 Version 0.9.5
 - Methods that get keys as parameter are now class methods, +[ObjectivePGP ...]
 - Adds decrypt:usingKeys:....
-- Adds Blowfish cipher support
+- Adds Blowfish cipher support.
+- Improves verify calls to accept armored data.
 
 Version 0.9.4
 - Fixes generation subkeys with passphrase.
